examples/errors/05_control_flow_errors.sop
// Soplang Control Flow Errors
// Demonstrates errors related to control flow statements

qor("Soplang Control Flow Error Examples")
qor("=================================")
qor("Uncomment examples one at a time to see specific errors")
qor()

// Example 1: Return outside function
// This will cause an error because return statements are only valid inside functions
// soo_celi "Can't return outside a function"

// Example 2: Break outside loop
// This will cause an error because break statements are only valid inside loops
// jooji

// Example 3: Continue outside loop
// This will cause an error because continue statements are only valid inside loops
// sii_wad

// Example 4: Invalid for loop parameters
// This will cause an error because for loop parameters must be numeric
// ku_celi i min "start" ilaa "end" {
//     qor(i)
// }

// Example 5: Unreachable code after return
// This code will execute but the line after return won't be reached
// hawl testReturn() {
//     soo_celi "Returned value"
//     qor("This line is unreachable")  // This warning would be detected in more advanced languages
// }
// testReturn()

// Example 6: Break in nested loop only breaks inner loop
// This demonstrates how break only affects the innermost loop (not an error but important behavior)
qor("Demonstrating break in nested loops:")
ku_celi i min 1 ilaa 3 {
    qor("Outer loop: " + i)
    ku_celi j min 1 ilaa 3 {
        qor("  Inner loop: " + j)
        haddii (j == 2) {
            qor("  Breaking inner loop")
            jooji
        }
    }
    qor("Outer loop continues")
}

// Valid example of proper function return
hawl add(a, b) {
    soo_celi a + b
}
door result = add(5, 3)
qor("Function result: " + result)
